--- a/404.md
+++ b/404.md
@@ -1,9 +1,17 @@
 ---
 layout: page
-title: 404 - Page not found
+title: The report doesn't exist or is in generating 
 permalink: /404
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+
+
+Sorry, the page you are looking for does not exist. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+
+
+<center>
+  <center>
+    <img src="{{ site.baseurl }}/images/404.png" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>
+  </center>
+</center>
